testsuite/tests/lexical_envs/invalid_entity_resolver/has_args.lkt
import common

class FooNode implements Node[FooNode] {
    fun resolve_ref(i: Int): Entity[FooNode] = node.node_env.get(s"foo")?[i]
}
